fixed the iframe on mobile size

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ header {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  background-image: url("images/hero-bg.jpg");
+  background-image: url("../images/hero-bg.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -393,7 +393,7 @@ section {
   margin: 15px;
 }
 
-.contact-info iframe {
+.contact-iframe iframe {
   height: 400px;
 }
 
@@ -521,8 +521,12 @@ section {
     flex: 0 70%;
   }
 
-  .contact-info iframe {
+  .contact-iframe iframe {
     flex: 1 100%;
+  }
+
+  .contact-iframe {
+    text-align: right;
   }
 }
 
@@ -553,6 +557,10 @@ section {
   .step-text {
     flex: 100%;
   }
+
+  .contact-iframe {
+    text-align: center;
+  }
 }
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
@@ -579,6 +587,23 @@ section {
 
   .contact-info > * {
     flex: 0 100%;
+  }
+
+  .contact-iframe {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%;
+  }
+
+  .contact-iframe iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
   }
 
   .contact-form {
